kubernetes/apps/cloudflare-ddns/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-ddns
  namespace: cloudflare-ddns
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
